# cpuRender

./: CMakeLists.txt  MaskedOcclutionCulling.cpp  MaskedOcclutionCulling.h  ObjModel.cpp  ObjModel.h  cost.md  geometry.cpp  geometry.h  log.cpp  log.h  main.cpp  render.cpp  render.h  utils.cpp  utils.h
data/head/: head.mtl
data/santa_hat/: maozi_3.mtl
data/toukui/: toukui.mtl
